# TinyDB

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: Attribute.cpp  Attribute.h  BufferManager.cc  BufferManager.h  CatalogManager.cpp  CatalogManager.h  IndexName.cpp  IndexName.h  RecordManager.cpp  RecordManager.h  Table.cpp  Table.h  main.cpp
src/api/: Database.cpp  Database.h
src/catalog/: Attribute.cpp  Attribute.h  CatalogManager.cpp  CatalogManager.h  IndexName.cpp  IndexName.h  Table.cpp  Table.h
src/interpreter/: Parser.cpp  Parser.h
src/record/: RecordManager.cpp  RecordManager.h
